fixed bug on driver instructions block on mobile

--- a/nightbus-app/static/css/style.css
+++ b/nightbus-app/static/css/style.css
@@ -158,7 +158,7 @@ p {	width: 80%;
 
 .short-box {
 	width: 70%;
-	height: 500px;
+	height: 400px;
 	margin: 0 auto;
 }
 
@@ -669,20 +669,20 @@ tbody tr td {
 	color:#A84649;
 }
 
-/**** Driver page instructions ****/
+/**** Driver + Admin page instructions ****/
 
 .instructions {
 	background-color: #F2F6EA;
 	font-family: Roboto, sans-serif;
 	max-width: 100%;
-	height: 350px;
 	color: #001848;
 	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 	padding: 5px;
-	margin-top: -140px;
+	height: 400px;
 	margin-left: 15px;
 	position: relative;
 }
+
 
 .instructions h2 {
 	color: #A84649;
@@ -695,6 +695,7 @@ tbody tr td {
 	padding: 15px;
 	margin: 0 auto;
 	margin-right: 20px;
+	margin-top: 20px;
 }
 
 
@@ -727,11 +728,7 @@ tbody tr td {
 	border-radius: 20px;
 	padding: 10px;
 	align: center;
-	cursor:pointer;
-	position: absolute;
-	left: 37%;
-	bottom: 12%;
-	margin-top: 200px;
+	cursor: pointer;
 }
 
 /*** DESKTOP ***/
